--- a/Angular2OidcClient/package.json
+++ b/Angular2OidcClient/package.json
@@ -28,19 +28,19 @@
     "zone.js": "0.7.4"
   },
   "devDependencies": {
-    "@angular/cli": "1.0.0",
+    "@angular/cli": "^6.2.3",
     "@angular/compiler-cli": "2.4.0",
     "@types/jasmine": "2.5.36",
     "@types/node": "^6.0.42",
     "codelyzer": "~1.0.0-beta.3",
     "jasmine-core": "2.4.1",
     "jasmine-spec-reporter": "2.5.0",
-    "karma": "1.2.0",
+    "karma": "^3.1.1",
     "karma-chrome-launcher": "^2.0.0",
     "karma-cli": "^1.0.1",
     "karma-jasmine": "^1.0.2",
-    "karma-remap-istanbul": "^0.2.1",
-    "protractor": "4.0.9",
+    "karma-remap-istanbul": "^0.6.0",
+    "protractor": "^5.4.1",
     "ts-node": "1.2.1",
     "tslint": "3.13.0",
     "typescript": "~2.0.3",
